--- a/to-do-list/src/index.css
+++ b/to-do-list/src/index.css
@@ -5,3 +5,10 @@ body {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@plugin "daisyui";
+
+calendar-date [aria-current="date"] {
+    background-color: #3b82f6; /* Tailwind blue-500 */
+    color: white;
+    border-radius: 0.375rem; /* rounded-md */
+}
